--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "home-sphere",
+  "name": "ladimals",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.111.1",
-    "@react-three/fiber": "^8.17.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.105",
-    "@types/react": "^18.3.3",
+    "@types/node": "^16.18.106",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "ajv": "^8.0.0",
-    "ajv-keywords": "^5.0.0",
+    "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "three": "^0.167.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
